# mrover-workspace

./: Dockerfile
.github/workflows/: docker-image.yml
ansible/roles/jetson_dev/tasks/: main.yml
config/nav/: config.json
jetson/nav/: CMakeLists.txt  environment.cpp  environment.hpp  main.cpp  meson.build  rover.cpp  rover.hpp  stateMachine.cpp
jetson/nav/gate_search/: gateStateMachine.cpp  gateStateMachine.hpp
jetson/nav/obstacle_avoidance/: obstacleAvoidance.cpp  obstacleAvoidance.hpp
jetson/nav/search/: searchStateMachine.cpp  searchStateMachine.hpp
jetson/pathfinder/: CMakeLists.txt  config.json  config_schema.json  imgui.ini
jetson/pathfinder/include/: pointcloud.hpp  tinyply.h
jetson/pathfinder/include/viewer/: viewer.hpp
jetson/pathfinder/src/: main.cpp  tinyply.cpp
jetson/pathfinder/src/viewer/: imgui.cpp  viewer.cpp
jetson/percep/: CMakeLists.txt  main.cpp
jetson/percep_obs_detect/include/viewer/: viewer.hpp
jetson/percep_obs_detect/src/viewer/: viewer.cpp
rover_msgs/: Obstacle.lcm  ObstacleList.lcm  SearchPoints.lcm
